server/mcp-python/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: npa-mcp-server
  labels:
    app: npa-mcp-server
    part-of: npa-workbench
spec:
  host: gfm-npa-agentic-service.apps.ocpsit.uat.dbs.com
  to:
    kind: Service
    name: npa-mcp-server
    weight: 100
  port:
    targetPort: 3002
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
